--- a/site/public/css/index.css
+++ b/site/public/css/index.css
@@ -74,7 +74,7 @@
     border: 5px solid var(--color-4);
 }
 
-.home h2 {
+.home .post h2 {
     font-family: crenzo;
     font-size: 30px;
     padding: 15px;
