--- a/site/src/views/partials/head.ejs
+++ b/site/src/views/partials/head.ejs
@@ -4,5 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/b5b4548719.js" crossorigin="anonymous"></script>
+    <script src="/javascripts/header.js"></script>
     <title>Seven Store</title>
 </head>
