--- a/site/src/views/products/productDetail.ejs
+++ b/site/src/views/products/productDetail.ejs
@@ -39,15 +39,6 @@
                         <h3>$<%= product.price %> </h3>
                     </div>
                     <div class="seccion2">
-<!--                             <h4>color:</h4>
-                            <form action="resultado.html" method="POST">
-                                <input type="radio" id="color1" name="color">
-                                <label class="color1" for="color1"></label>
-                                <input type="radio" id="color2" name="color">
-                                <label class="color2" for="color2"></label>
-                                <input type="radio" id="color3" name="color">
-                                <label class="color3" for="color3"></label>
-                            </form> -->
                         <form action="resultado.html" method="POST">
                             <% if (product.sizes.length !== 0) { %>
                                 <h4>talle:</h4> 
@@ -94,15 +85,16 @@
                         <i class="fas fa-chevron-right"></i>
                     </button>
                     <div class="glider relacionadoGlider">
-                        <% products.forEach(product => { %>
-                            <a href="/products/detail/<%= product.id %> ">
-                                <div class="element">
-                                    <img src="/img/<%= product.images[0].file %> " alt="">
-                                    <h6><%= product.name %> </h6>
-                                    <p class="categoria"><%= product.category %> </p>
-                                    <p class="precio">$<%= product.price %> </p>
-                                </div>
-                            </a>
+                        <% products.forEach(related => { %>
+                            <% if (product.id != related.id) { %>
+                                <a href="/products/detail/<%= related.id %> ">
+                                    <div class="element">
+                                        <img src="/img/<%= related.images[0].file %> " alt="">
+                                        <h6><%= related.name %> </h6>
+                                        <p class="precio">$<%= related.price %> </p>
+                                    </div>
+                                </a>
+                            <% } %>
                         <% }) %>
                     </div>
                 </div>
