--- a/site/src/views/products/productAdd.ejs
+++ b/site/src/views/products/productAdd.ejs
@@ -12,104 +12,79 @@
     </header>
     <main>
         <h2>agregar producto</h2>
-        <form action="" method="POST" enctype="multipart/form-data">
+        <span id="error-empty" class="text-danger"></span>
+                  <hr>
+        <form action="" method="POST" enctype="multipart/form-data" id="form-productAdd" novalidate>
             <div class="mb-3">
-                <label for="formGroupExampleInput" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="formGroupExampleInput" name="name" value="<%= locals.old && old.name ? old.name : null %>">
-                <span class="text-danger" style="font-size: small;"><%= locals.errores && errores.name ? errores.name.msg : null %> </span> 
+                <label for="name" class="form-label">Nombre</label>
+                <input type="text" class="form-control <%= locals.errores && locals.errores.name ? 'is-invalid' : null %>" id="name" name="name" value="<%= locals.old && old.name ? old.name : null %>">
+                <span id="error-name" class="text-danger" style="font-size: small;"><%= locals.errores && errores.name ? errores.name.msg : null %> </span> 
               </div>
               <div class="mb-3">
-                <label for="formGroupExampleInput2" class="form-label">Precio</label>
-                <input type="number" class="form-control" id="formGroupExampleInput2" name="price" value="<%= locals.old && old.price ? old.price : null %>">
-                <span class="text-danger"style="font-size: small;"><%= locals.errores && errores.price ? errores.price.msg : null %> </span>
+                <label for="price" class="form-label">Precio</label>
+                <input type="number" class="form-control <%= locals.errores && locals.errores.price ? 'is-invalid' : null %>" id="price" name="price" value="<%= locals.old && old.price ? old.price : null %>">
+                <span id="error-price" class="text-danger"style="font-size: small;"><%= locals.errores && errores.price ? errores.price.msg : null %> </span>
               </div>
-<!--               <div class="mb-3">
-                <label for="formGroupExampleInput2" class="form-label">Codigo</label>
-                <input type="number" class="form-control" id="formGroupExampleInput2" name="cod" >
-              </div> -->
               <div class="mb-3">
                 <label for="category" class="form-label">Categoría</label>
 
-                <select id="category" class="form-select" name="category">
+                <select id="category" class="form-select <%= locals.errores && locals.errores.category ? 'is-invalid' : null %>" name="category">
                     <option value="" selected hidden>Seleccione la categoría</option>
             <% categories.forEach(category => { %>
              <option value="<%= category.id %>" <%= locals.old && old.category == category.id ? 'selected' : null%> ><%= category.name %></option>
             <% }) %>
                 </select>
-                <span class="text-danger" style="font-size: small;"><%= locals.errores && errores.category ? errores.category.msg : null %> </span>
+                <span id="error-category" class="text-danger" style="font-size: small;"><%= locals.errores && errores.category ? errores.category.msg : null %> </span>
               </div>
 
               <div class="mb-3">
                 <label for="genre" class="form-label">Genero</label>
 
-                <select id="genre" class="form-select" name="genre">
+                <select id="genre" class="form-select <%= locals.errores && locals.errores.genre ? 'is-invalid' : null %>" name="genre">
                     <option value="" selected hidden>Seleccione el genero</option>
                     <option value="masculino" <%= locals.old && old.genre == "masculino" ? 'selected' : null%> >Hombre</option>
                     <option value="femenino" <%= locals.old && old.genre == "femenino" ? 'selected' : null%> >Mujer</option>
                 </select>
-                <span class="text-danger" style="font-size: small;"><%= locals.errores && errores.genre ? errores.genre.msg : null %> </span>
+                <span id="error-genre" class="text-danger" style="font-size: small;"><%= locals.errores && errores.genre ? errores.genre.msg : null %> </span>
               </div>
 
               <div class="mb-3">
                 <label for="brand" class="form-label">Marca</label>
 
-                <select id="brand" class="form-select" name="brand">
+                <select id="brand" class="form-select <%= locals.errores && locals.errores.brand ? 'is-invalid' : null %>" name="brand">
                     <option value="" selected hidden>Seleccione la marca</option>
                     <% brands.forEach(brand => { %>
                       <option value="<%= brand.id %>" <%= locals.old && old.brand == brand.id ? 'selected' : null%> ><%= brand.name %></option>
                     <% }) %>
                 </select>
-                <span class="text-danger" style="font-size: small;"><%= locals.errores && errores.brand ? errores.brand.msg : null %> </span>
+                <span id="error-brand" class="text-danger" style="font-size: small;"><%= locals.errores && errores.brand ? errores.brand.msg : null %> </span>
               </div>
-<!--               <label for="exampleColorInput" class="form-label">Color</label>
-<input type="color" class="form-control form-control-color" id="exampleColorInput" value="#000" title="Choose your color"> -->
-                <label for="formGroupExampleInput" class="form-label">Talles</label><br>
+                <label for="size" class="form-label">Talles</label><br>
                 <% sizes.forEach(size => { %>
                   <div class="form-check form-check-inline mb-3">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="size" value="<%= size.id %>">
+                    <input class="form-check-input" type="checkbox" id="size" name="size" value="<%= size.id %>">
                     <label class="form-check-label" for="inlineCheckbox1"><%= size.size %></label>
                   </div>
                 <% }) %>
                 <div class="mb-3">
-                <label for="floatingTextarea">Descripción</label>
-                <textarea class="form-control" id="floatingTextarea" name="description" ><%= locals.old && old.description ? old.description : null %></textarea>
-                <span class="text-danger" style="font-size: small;"><%= locals.errores && errores.description ? errores.description.msg : null %> </span>
+                <label for="description">Descripción</label>
+                <textarea class="form-control <%= locals.errores && locals.errores.description ? 'is-invalid' : null %>" id="description" name="description" ><%= locals.old && old.description ? old.description : null %></textarea>
+                <span id="error-description" class="text-danger" style="font-size: small;"><%= locals.errores && errores.description ? errores.description.msg : null %> </span>
               </div>
-              <!-- <div class="mb-3">
-                <label for="formFile" class="form-label">Imagen</label>
-                <input class="form-control" type="file" id="formFile">
-              </div> -->
               <div class="mb-3">
-                <label for="productImagen" class="form-label">Imagen</label>
-                <input type="file" class="form-control" id="productImagen" name="images" accept="image/*" multiple>
-                <span class="text-danger" style="font-size: small;"><%= locals.errores && errores.images ? errores.images.msg : null %><%= typeof error != 'undefined' ? errores : null %> </span>
+                <label for="images" class="form-label">Imagen</label>
+                <input type="file" class="form-control <%= locals.errores && locals.errores.images ? 'is-invalid' : null %>" id="images" name="images" accept="image/*" multiple>
+                <span id="error-images" class="text-danger" style="font-size: small;"><%= locals.errores && errores.images ? errores.images.msg : null %><%= typeof error != 'undefined' ? errores : null %> </span>
               </div>
-              
-              
               <button class="btn btn-primary" type="submit" style="margin: 20px auto; display: flex; justify-content: center; flex-direction: column; align-items: center;">Guardar</button>
             </form>
         
     </main>
-    <div>
-        <article class="insta">
-            <i class="fab fa-instagram"></i>
-            <h3>instagram</h3>
-            <section>
-                <div>
-                    <img src="/images/pokemon.jpeg" alt="">
-                    <img src="/images/pokemon.jpeg" alt="">
-                </div>
-                <div>
-                    <img src="/images/pokemon.jpeg" alt="">
-                    <img src="/images/pokemon.jpeg" alt="">
-                </div>
-            </section>
-        </article>
-    </div>
     <footer>
         <%- include('../partials/footer') %>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+    <script src="/javascripts/productAddValidator.js"></script>
+  </body>
 
 </html>
