--- a/site/src/views/products/productEdit.ejs
+++ b/site/src/views/products/productEdit.ejs
@@ -12,21 +12,19 @@
     </header>
     <main>
         <h2>editar producto</h2>
-        <form action="/products/edit/<%= product.id %>?_method=PUT" method="POST" enctype="multipart/form-data">
+        <span id="error-empty" class="text-danger"></span>
+                  <hr>
+        <form action="/products/edit/<%= product.id %>?_method=PUT" method="POST" enctype="multipart/form-data" id="form-productEdit">
             <div class="mb-3">
-                <label for="formGroupExampleInput" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="formGroupExampleInput" name="name" value="<%= locals.old && old.name ? old.name : product.name %>">
-                <span class="text-danger" style="font-size: small;"><%= locals.errores && errores.name ? errores.name.msg : null %> </span> 
+                <label for="name" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="name" name="name" value="<%= locals.old && old.name ? old.name : product.name %>">
+                <span id="error-name" class="text-danger" style="font-size: small;"><%= locals.errores && errores.name ? errores.name.msg : null %> </span> 
               </div>
               <div class="mb-3">
-                <label for="formGroupExampleInput2" class="form-label">Precio</label>
-                <input type="number" class="form-control" id="formGroupExampleInput2" name="price" value="<%= locals.old && old.price ? old.price : product.price %>">
-                <span class="text-danger"style="font-size: small;"><%= locals.errores && errores.price ? errores.price.msg : null %> </span>
+                <label for="price" class="form-label">Precio</label>
+                <input type="number" class="form-control" id="price" name="price" value="<%= locals.old && old.price ? old.price : product.price %>">
+                <span id="error-price" class="text-danger"style="font-size: small;"><%= locals.errores && errores.price ? errores.price.msg : null %> </span>
               </div>
-    <!--               <div class="mb-3">
-                <label for="formGroupExampleInput2" class="form-label">Codigo</label>
-                <input type="number" class="form-control" id="formGroupExampleInput2" name="cod">
-              </div> -->
               <div class="mb-3">
                 <label for="category" class="form-label">Categoría</label>
     
@@ -35,6 +33,7 @@
                         <option value="<%= category.id %>" <%= category.id === product.categories.id ? 'selected' : null %> ><%= category.name %></option>
                        <% }) %>
                   </select>
+                  <span id="error-category" class="text-danger" style="font-size: small;"><%= locals.errores && errores.category ? errores.category.msg : null %> </span>
               </div>
 
               <div class="mb-3">
@@ -44,6 +43,7 @@
                     <option value="masculino"  <%= product.genre === "masculino" ? 'selected' : null %> >Hombre</option>
                     <option value="femenino" <%= product.genre === "femenino" ? 'selected' : null %> >Mujer</option>
                 </select>
+                <span id="error-genre" class="text-danger" style="font-size: small;"><%= locals.errores && errores.genre ? errores.genre.msg : null %> </span>
               </div>
 
               <div class="mb-3">
@@ -54,10 +54,9 @@
                       <option value="<%= brand.id %>" <%= brand.id === product.brands.id ? 'selected' : null %> ><%= brand.name %></option>
                     <% }) %>
                 </select>
+                <span id="error-brand" class="text-danger" style="font-size: small;"><%= locals.errores && errores.brand ? errores.brand.msg : null %> </span>
               </div>
-    <!--               <label for="exampleColorInput" class="form-label">Color</label>
-    <input type="color" class="form-control form-control-color" id="exampleColorInput" title="Choose your color" name="color">
-    -->             <label for="formGroupExampleInput" class="form-label">Talles</label><br>
+                 <label for="formGroupExampleInput" class="form-label">Talles</label><br>
                     <% sizes.forEach(element => { %>
                         <div class="form-check form-check-inline mb-3">
                             <input class="form-check-input" type="checkbox" id="inlineCheckbox1" name="size" value="<%= element.id %>">
@@ -70,14 +69,14 @@
                         </div>
                     <% }) %>
                 <div class="mb-3">
-                <label for="floatingTextarea">Descripción</label>
-                <textarea class="form-control" id="floatingTextarea" name="description" ><%= locals.old && old.description ? old.description : product.description %></textarea>
-                <span class="text-danger" style="font-size: small;"><%= locals.errores && errores.description ? errores.description.msg : null %> </span>
+                <label for="description">Descripción</label>
+                <textarea class="form-control" id="description" name="description" ><%= locals.old && old.description ? old.description : product.description %></textarea>
+                <span id="error-description" class="text-danger" style="font-size: small;"><%= locals.errores && errores.description ? errores.description.msg : null %> </span>
               </div>
               <div class="mb-3">
-                <label for="productImagen" class="form-label">Imagen</label>
-                <input type="file" class="form-control" id="productImagen" name="images" accept="image/*" multiple>
-                <span class="text-danger" style="font-size: small;"><%= locals.errores && errores.images ? errores.images.msg : null %><%= typeof error != 'undefined' ? errores : null %> </span>
+                <label for="images" class="form-label">Imagen</label>
+                <input type="file" class="form-control" id="images" name="images" accept="image/*" multiple>
+                <span id="error-images" class="text-danger" style="font-size: small;"><%= locals.errores && errores.images ? errores.images.msg : null %><%= typeof error != 'undefined' ? errores : null %> </span>
               </div>
               
               
@@ -95,6 +94,7 @@
         <%- include('../partials/footer') %>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="/javascripts/productEditValidator.js"></script>
 </body>
 
 </html>
