--- a/site/public/css/general.css
+++ b/site/public/css/general.css
@@ -16,8 +16,8 @@ ul, ol, a{
 }
 
 @font-face {
-    font-family: "Crenzo";
+    font-family: "Poppins";
     font-style: normal;
     font-weight: normal;
-    src: url("/fonts/CRENZO.ttf") format("truetype");
+    src: url("/fonts/Poppins") format("truetype");
 }
