--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -17,13 +17,15 @@
             <h6>Datos de usuario</h6>
             <p>Si no estas registrado <a href="/users/register">click aca</a></p>
         </div>
-        <form method="POST">
+        <form method="POST" id="form-login">
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Correo Electronico</label>
-                <input type="email" name="email" value="<%= locals.old && old.email ? old.email : null %> " class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <label for="error-email" class="form-label">Correo Electronico</label>
+                <input type="email" name="email" value="<%= locals.old && old.email ? old.email : null %> " class="form-control" id="error-email" aria-describedby="emailHelp">
+                <span id="error-email"></span>
                 <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                    <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+                    <label for="error-password" class="form-label">Contraseña</label>
+                    <input type="password" name="password" class="form-control" id="error-password">
+                    <span id="error-password"></span>
                 </div>
                 <div class="d-flex justify-content-end" style="flex-direction: column; align-items: center;">
                     <% if (locals.errors && errors ) { %>
@@ -46,7 +48,7 @@
         <article class="insta">
             <i class="fab fa-instagram"></i>
             <h3>instagram</h3>
-            <section>
+            <!-- <section>
                 <div>
                     <img src="/images/pokemon.jpeg" alt="">
                     <img src="/images/pokemon.jpeg" alt="">
@@ -55,13 +57,14 @@
                     <img src="/images/pokemon.jpeg" alt="">
                     <img src="/images/pokemon.jpeg" alt="">
                 </div>
-            </section>
+            </section> -->
         </article>
     </div>
     <footer>
         <%- include('../partials/footer') %>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="/javascripts/registerValidator.js"></script>
 </body>
 
 </html>
