--- a/site/src/views/users/register.ejs
+++ b/site/src/views/users/register.ejs
@@ -17,28 +17,30 @@
             <h6>Datos de usuario</h6>
             <p>Si ya estas registrado <a href="/users/login">click aca</a></p>
         </div>
-        <form method="POST" enctype="multipart/form-data">
+        <form method="POST" id="form-register" enctype="multipart/form-data">
             <div class="mb-3">
-                <label for="exampleInputName1" class="form-label">Nombre</label>
-                <input type="text" name="name" placeholder="Jose" value="<%= locals.old && old.name ? old.name : null %>" class="form-control" id="exampleInputName1" aria-describedby="emailHelp">
+                <label for="name-input" class="form-label">Nombre</label>
+                <input type="text" name="name" placeholder="Jose" value="<%= locals.old && old.name ? old.name : null %>" class="form-control" id="name-input" aria-describedby="emailHelp">
                 <% if (locals.errors) { %>
                  <% errors.forEach(error => { %>
                     <span><%- error.param === "name" ? error.msg : null %> </span>
                  <% }) %>
                 <% } %>
-              </div>
+                <span id="error-name"></span>  
+            </div>
             <div class="mb-3">
-                <label for="exampleInputLastName1" class="form-label">Apellido</label>
-                <input type="text" name="last_name" placeholder="Perez" value="<%= locals.old && old.last_name ? old.last_name : null %>" class="form-control" id="exampleInputLastName1" aria-describedby="emailHelp">
+                <label for="last-name-input" class="form-label">Apellido</label>
+                <input type="text" name="last_name" placeholder="Perez" value="<%= locals.old && old.last_name ? old.last_name : null %>" class="form-control" id="last-name-input" aria-describedby="emailHelp">
                 <% if (locals.errors) { %>
                     <% errors.forEach(error => { %>
                        <span><%- error.param === "last_name" ? error.msg : null %> </span>
                     <% }) %>
                    <% } %>
+                   <span id="error-last-name"></span>
               </div>
             <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email</label>
-              <input type="email" name="email" placeholder="joseperez@gmail.com" value="<%= locals.old && old.email ? old.email : null %>" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <label for="email-input" class="form-label">Email</label>
+              <input type="email" name="email" placeholder="joseperez@gmail.com" value="<%= locals.old && old.email ? old.email : null %>" class="form-control" id="email-input" aria-describedby="emailHelp">
               <% if (locals.errors) { %>
                 <% errors.forEach(error => { %>
                    <span><%- error.param === "email" ? error.msg : null %> </span>
@@ -47,33 +49,37 @@
                <% if (locals.errorEmail) { %>
                 <span><%= errorEmail.msg %></span>
             <% } %>
+            <span id="error-email"></span>
             </div>
             <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-              <input type="password" name="password" class="form-control" id="exampleInputPassword1">
+              <label for="password-input" class="form-label">Contraseña</label>
+              <input type="password" name="password" class="form-control" id="password-input">
               <% if (locals.errors) { %>
                 <% errors.forEach(error => { %>
                    <span><%- error.param === "password" ? error.msg : null %> </span>
                 <% }) %>
                <% } %>
+               <span id="error-password"></span>
             </div>
             <div class="mb-3">
-                <label for="exampleInputPhoneNumber1" class="form-label">Número de telefono</label>
-                <input type="number" name="number" placeholder="15-12345678" value="<%= locals.old && old.number ? old.number : null %>" class="form-control" id="exampleInputPhoneNumber1" aria-describedby="emailHelp">
+                <label for="phone-input" class="form-label">Número de telefono</label>
+                <input type="number" name="number" placeholder="15-12345678" value="<%= locals.old && old.number ? old.number : null %>" class="form-control" id="phone-input" aria-describedby="emailHelp">
                 <% if (locals.errors) { %>
                     <% errors.forEach(error => { %>
                        <span><%- error.param === "number" ? error.msg : null %> </span>
                     <% }) %>
                    <% } %>
+                   <span id="error-phone"></span>
               </div>
               <div class="mb-3">
-                <label for="formFile" class="form-label">Avatar</label>
-                <input class="form-control" type="file" name="image" id="formFile">
+                <label for="file-input" class="form-label">Avatar</label>
+                <input class="form-control" type="file" name="image" id="file-input">
                 <% if (locals.errors) { %>
                     <% errors.forEach(error => { %>
                        <span><%- error.param === "image" ? error.msg : null %> </span>
                     <% }) %>
                    <% } %>
+                   <span id="error-file"></span>
               </div>
             <div style="justify-content: center; flex-direction: column; align-items: center;"><button type="submit" class="btn btn-primary" style="margin: 0px auto; display: flex; justify-content: center; flex-direction: column; align-items: center;">Registrate</button></div>
           </form>
@@ -83,7 +89,7 @@
         <article class="insta">
             <i class="fab fa-instagram"></i>
             <h3>instagram</h3>
-            <section>
+            <!-- <section>
                 <div>
                     <img src="/images/pokemon.jpeg" alt="">
                     <img src="/images/pokemon.jpeg" alt="">
@@ -92,13 +98,14 @@
                     <img src="/images/pokemon.jpeg" alt="">
                     <img src="/images/pokemon.jpeg" alt="">
                 </div>
-            </section>
+            </section> -->
         </article>
     </div>
     <footer>
         <%- include('../partials/footer') %>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="/javascripts/registerValidator.js"></script>
 </body>
 
 </html>
