--- a/site/public/css/productAdd.css
+++ b/site/public/css/productAdd.css
@@ -3,7 +3,7 @@
     background-color: var(--color-1);
     font-family: "Poppins";
 }
-.productAdd h2{
+.productAdd h2.title{
     text-transform: uppercase;
     color: #000;
     border-bottom: 1px solid var(--color-4);
