--- a/site/public/css/register.css
+++ b/site/public/css/register.css
@@ -4,7 +4,7 @@
     font-family: "Poppins";
 }
 
-.register h2{
+.register h2.title{
     text-transform: uppercase;
     color: #000;
     border-bottom: 1px solid var(--color-4);
