--- a/site/src/views/products/productAdd.ejs
+++ b/site/src/views/products/productAdd.ejs
@@ -11,7 +11,7 @@
         <%- include('../partials/header') %>
     </header>
     <main>
-        <h2>agregar producto</h2>
+        <h2 class="title" >agregar producto</h2>
         <span id="error-empty" class="text-danger"></span>
                   <hr>
         <form action="" method="POST" enctype="multipart/form-data" id="form-productAdd" novalidate>
