--- a/site/src/views/users/profile.ejs
+++ b/site/src/views/users/profile.ejs
@@ -10,7 +10,7 @@
     <header>
         <%- include('../partials/header') %>
     </header>
-    <h2 style="margin: 20px auto;">Perfil de usuario</h2>
+    <h2 class="title" style="margin: 20px auto;">Perfil de usuario</h2>
     <main>
         <div>
             <h4>Datos de usuario</h4>
