--- a/site/public/css/login.css
+++ b/site/public/css/login.css
@@ -3,7 +3,7 @@
     background-color: var(--color-1);
     font-family: "Poppins";
 }
-.login h2{
+.login h2.title{
     text-transform: uppercase;
     color: #000;
     border-bottom: 1px solid var(--color-4);
