--- a/site/public/css/profile.css
+++ b/site/public/css/profile.css
@@ -4,7 +4,7 @@
     font-family: "Poppins";
 }
 
-.profile h2{
+.profile h2.title{
     text-transform: uppercase;
     color: #000;
     border-bottom: 1px solid var(--color-4);
