--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -10,7 +10,7 @@
     <header>
         <%- include('../partials/header') %>
     </header>
-    <h2 style="margin: 20px auto;">Ingreso de usuario</h2>
+    <h2 class="title" style="margin: 20px auto;">Ingreso de usuario</h2>
     <main>
         <h3>Ingresa a tu cuenta</h3>
         <div>
