--- a/site/src/views/users/profile.ejs
+++ b/site/src/views/users/profile.ejs
@@ -15,15 +15,15 @@
         <div>
             <h4>Datos de usuario</h4>
         </div>
-        <h6>Avatar</h6>
-        <div><img src="/img/users/<%= user.image %>" alt="Avatar..."></div>
-        <h6>Nombre</h6>
+        <h5>Avatar</h5>
+        <img src="/img/users/<%= user.image %>" alt="Avatar...">
+        <h5>Nombre</h5>
             <div> <%= user.name%> </div>
-        <h6>Apellido</h6>
+        <h5>Apellido</h5>
             <div><%= user.last_name %></div>
-        <h6>email</h6>
+        <h5>email</h5>
             <div style="text-transform: lowercase"><%=user.email %></div>
-        <h6>Número de teléfono</h6>
+        <h5>Número de teléfono</h5>
             <div><%= user.number %></div>
         <section>
         <div class="edit">
