linkeo de banners

--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -11,16 +11,24 @@
     <section class="container-slider">
         <div class="slider" id="slider">
             <div class="slider__section">
-                <img src="/img/banner2.jpg" alt="" class="slider__img">
+                <a href="/products/brand/2">
+                    <img src="/img/banner2.jpg" alt="" class="slider__img">
+                </a>
             </div>
             <div class="slider__section">
-                <img src="/img/banner1.jpg" alt="" class="slider__img">
+                <a href="/products/brand/3">
+                    <img src="/img/banner1.jpg" alt="" class="slider__img">
+                </a>
             </div>
             <div class="slider__section">
-                <img id="img3" src="/img/banner2.jpg" alt="" class="slider__img">
+                <a href="/products/brand/2">
+                    <img id="img3" src="/img/banner2.jpg" alt="" class="slider__img">
+                </a>
             </div>
             <div class="slider__section">
-                <img src="/img/banner1.jpg" alt="" class="slider__img">
+                <a href="/products/brand/3">
+                    <img src="/img/banner1.jpg" alt="" class="slider__img">
+                </a>
             </div>
         </div>
         <span class="slider__btn slider__btn--left" id="btn-left"><i class="fas fa-chevron-left"></i></span>
