--- a/site/src/views/partials/footer.ejs
+++ b/site/src/views/partials/footer.ejs
@@ -12,12 +12,13 @@
         </section>
         <section>
             <h4>Contacto</h4>
-            <p>sucursal</p>
-            <p>telefono</p>
-            <p>venta online</p>
-            <p>Whatsapp</p>
+            <p>sucursal: Avenida siempre viva 742</p>
+            <p>venta online: 1537621599</p>
+            <p>Whatsapp: 1151768589</p>
         </section>
     </div>
     <h5>sevenStore@gmail.com</h5>
-    <p class="copyright">copyright</p>
+    <a href="#SevenStore">
+        <p class="copyright">Seven Store®</p>
+    </a>
 </footer>
