--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -3,7 +3,7 @@
         <div class="burger-menu" id="burger-menu">
             <i class="fas fa-bars"></i>
         </div>
-        <div class="title">
+        <div id="SevenStore" class="title">
             <a href="/">
                 <h1 class="mobile">7</h1>
                 <h1 class="desktop">Seven store</h1>
