--- a/site/src/views/users/edit.ejs
+++ b/site/src/views/users/edit.ejs
@@ -9,7 +9,7 @@
     <header>
         <%- include('../partials/header') %>
     </header>
-    <h2 style="margin: 20px auto;">Editar de usuario</h2>
+    <h2 class="title" style="margin: 20px auto;">Editar de usuario</h2>
     <main>
         <div>
             <h6>Datos de usuario</h6>
