--- a/site/src/views/products/productDetail.ejs
+++ b/site/src/views/products/productDetail.ejs
@@ -21,7 +21,7 @@
                         </button>
                         <div class="glider">
                             <% product.images.forEach(img => { %>
-                                <img class="img-glider" src="/img/<%= img %> " alt="">
+                                <img class="img-glider" src="/img/<%= img.file %> " alt="">
                             <% }) %> 
                         </div>
                     </div>
