--- a/site/public/css/productAdd.css
+++ b/site/public/css/productAdd.css
@@ -1,6 +1,8 @@
 .productAdd{
     box-sizing: border-box;
     background-color: var(--color-1);
+    background-image: url("/img/fondo.png");
+    background-size: 100px;
     font-family: "Poppins";
 }
 .productAdd h2.title{
