--- a/site/public/css/productEdit.css
+++ b/site/public/css/productEdit.css
@@ -1,6 +1,8 @@
 .productEdit{
     box-sizing: border-box;
     background-color: var(--color-1);
+    background-image: url("/img/fondo.png");
+    background-size: 100px;
     font-family: "Poppins";
 }
 .productEdit h2.title{
