--- a/site/public/css/products.css
+++ b/site/public/css/products.css
@@ -1,6 +1,8 @@
 .products{
     box-sizing: border-box;
     background-color: var(--color-1);
+    background-image: url("/img/fondo.png");
+    background-size: 100px;
     font-family: "Poppins";
 }
 
