correccion de mayuscula en ul hombre y mujer

--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -18,7 +18,7 @@
             <div id="men">
                 <h2>Hombre</h2>
                 <ul id="ul-men">
-                    <li><a href="/products/masculino/category/1">zapatillas</a></li>
+                    <li><a href="/products/masculino/category/1">Zapatillas</a></li>
                     <li><a href="/products/masculino/category/2">Ojotas</a></li>
                     <li><a href="/products/masculino/category/3">Deportivo</a></li>
                     <li><a href="/products/masculino/all">Todas las categorias</a></li>
@@ -27,7 +27,7 @@
             <div id="women">
                 <h2>Mujer</h2>
                 <ul id="ul-women">
-                    <li><a href="/products/femenino/category/1">zapatillas</a></li>
+                    <li><a href="/products/femenino/category/1">Zapatillas</a></li>
                     <li><a href="/products/femenino/category/2">Ojotas</a></li>
                     <li><a href="/products/femenino/category/3">Deportivo</a></li>
                     <li><a href="/products/femenino/all">Todas las categorias</a></li>
