miniatura en pestaña de la web agregada

--- a/site/src/views/partials/head.ejs
+++ b/site/src/views/partials/head.ejs
@@ -3,6 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="shorcut icon" href="/img/numero7.png">
     <script src="https://kit.fontawesome.com/b5b4548719.js" crossorigin="anonymous"></script>
     <script src="/javascripts/header.js"></script>
     <title>Seven Store</title>
