--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -75,10 +75,10 @@
             <% } %>
         </div>
         <div class="search-bar">
-            <form action="/products/search" class="d-flex" method="GET">
+            <form action="/products/search" class="d-flex" id="searchBar" method="GET">
                 <input name="keywords" type="text" id="search" placeholder="Buscar productos">
                 <button type="submit" id="seach-button">
-                    <i class="fas fa-search"></i>
+                    <i id="buttton" class="fas fa-search"></i>
                 </button>
             </form>
         </div>
