--- a/site/src/views/users/edit.ejs
+++ b/site/src/views/users/edit.ejs
@@ -40,7 +40,7 @@
               </div>
               <div class="mb-3">
                 <label for="formFile" class="form-label">Avatar</label>
-                <input class="form-control" type="file" name="image" id="formFile">
+                <input class="form-control" type="file" name="image" id="formFile" accept="image/*">
               </div>
             <div style="justify-content: center; flex-direction: column; align-items: center;"><button type="submit" class="btn btn-primary" style="margin: 0px auto; display: flex; justify-content: center; flex-direction: column; align-items: center;">Guardar cambios</button></div>
           </form>
