--- a/site/public/css/productAdd.css
+++ b/site/public/css/productAdd.css
@@ -58,6 +58,16 @@
     display: none;
 }
 
+.productAdd #preview{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+}
+
 @media (min-width: 480px){
     /* section */
 
@@ -105,6 +115,10 @@
     }
     .productAdd main form span{
         font-size: 20px;
+    }
+
+    .productAdd #preview{
+        flex-direction: row;
     }
 
     /* section */
