--- a/site/public/css/profile.css
+++ b/site/public/css/profile.css
@@ -55,6 +55,20 @@
     width: 20px;
     margin: 10px auto;
 }
+.profile main div button{
+    padding: 5px;
+    border-radius: 5px;
+    border: 2px solid var(--color-4);
+    background-color: var(--color-1);
+    cursor: pointer;
+    transition-property: all;
+    transition-duration: 300ms;
+}
+
+.profile main div button:hover{
+    border: 2px solid var(--color-1);
+    background-color: var(--color-3);
+}
 
 @media (min-width: 769px){
 
