--- a/site/src/views/products/productEdit.ejs
+++ b/site/src/views/products/productEdit.ejs
@@ -76,6 +76,8 @@
               <div class="mb-3">
                 <label for="images" class="form-label">Imagen</label>
                 <input type="file" class="form-control" id="images" name="images" accept="image/*" multiple>
+                <div id="preview">
+                </div>
                 <span id="error-images" class="text-danger" style="font-size: small;"><%= locals.errores && errores.images ? errores.images.msg : null %><%= typeof error != 'undefined' ? errores : null %> </span>
               </div>
               
