--- a/site/src/views/users/profile.ejs
+++ b/site/src/views/users/profile.ejs
@@ -34,7 +34,7 @@
             </form>    
         </div>
         <div class="delete">
-            <form action="/users/<%= user.id %>?_method=DELETE" method="POST">
+            <form action="/users/<%= user.id %>?_method=DELETE" method="POST" id="delete">
                 <button type="submit">
                     <i class="fas fa-trash-alt"></i>
                 </button>
@@ -45,6 +45,8 @@
     <footer>
         <%- include('../partials/footer') %>
     </footer>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/javascripts/profile.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
